# TestFlaskApp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
tests/: test_main.py
